--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-toggleable-md navbar-light fixed-top bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand" href="{{ site.baseurl }}/"><img class="nav-image" src="{{site.baseurl}}/img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="{{ site.baseurl }}/index-old.html"><img class="nav-image" src="{{site.baseurl}}/img/wac_logo_full.png" alt="WAC Logo"/></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
@@ -24,16 +24,13 @@
       <li class="nav-item{% if page.url == '/schedule/' %} active{% endif %}">
         <a class="nav-link" href="{{ site.baseurl }}/schedule/">Schedule</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/files/del_2017.pdf">Delegate Package</a>
-      </li>
       <li class="nav-item{% if page.url == '/contact/' %} active{% endif %}">
         <a class="nav-link" href="{{ site.baseurl }}/contact/">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="{{site.baseurl}}/reg/" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="{{ site.regurl }}" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
