--- a/_layouts/plenary.html
+++ b/_layouts/plenary.html
@@ -12,7 +12,7 @@
 		<div class="container">
 			<div class="text-center">
 				<div class="card">
-					<div class="card-block">
+					<div class="card-body">
 						<h1>{{ page.title }}</h1>
 						<img class="img-fluid plenary-img" src="{{site.baseurl}}/img/plen/{{page.pic}}" alt="{{page.title}} picture"/>
 						<p class="card-text">
@@ -24,7 +24,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="card card-block mt-2">
+			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="card card-block text-center mt-2">
+			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="{{site.baseurl}}/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
