--- a/css/style.scss
+++ b/css/style.scss
@@ -228,7 +228,7 @@ h1, h2, h3 {
 }
 
 
-// Staff Page
+// Icons
 
 .black-icon{
 	color: black;
@@ -238,6 +238,16 @@ a.black-icon:hover{
 }
 a.black-icon:visited{
 	color:black;
+}
+
+.white-icon{
+	color: white;
+}
+a.white-icon:hover{
+	color: white;
+}
+a.white-icon:visited{
+	color:white;
 }
 
 
