hiding some content

--- a/_layouts/plenary.html
+++ b/_layouts/plenary.html
@@ -14,16 +14,19 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>{{ page.title }}</h1>
+						{% comment %}
 						<img class="img-fluid plenary-img" src="{{site.baseurl}}/img/plen/{{page.pic}}" alt="{{page.title}} picture"/>
 						<p class="card-text">
 							{{ content }}
 						</p>
-						<!--
-						<a class="btn btn-outline-primary text-center" href="{{page.form1}}">Plenary Questionnaire 1</a> <a class="btn btn-outline-primary text-center" href="{{page.form2}}">Plenary Questionnaire 2</a>
-					-->
+						{% endcomment %}
+						<p class="card-text">
+							More information on plenaries and programs are coming soon.
+						</p>
 					</div>
 				</div>
 			</div>
+			{% comment %}
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
@@ -45,6 +48,7 @@
 					</div>
 				</div>
 			</div>
+			{% endcomment %}
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="{{site.baseurl}}/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
