minor programs changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
   <body>
     {% include navbar.html %}
 
+    <div class="container">
+      <div class="alert alert-info" role="alert">
+        Additional information such as our keynote speaker, plenary descriptions and address rosters are coming soon - stay tuned!
+      </div>
+    </div>
 
       {{ content }}
 
