adds github to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
     <a href="{{site.facebook}}"><span class="fa fa-fw fa-2x fa-facebook white-icon"></span></a>
     <a href="{{site.instagram}}"><span class="fa fa-fw fa-2x fa-instagram white-icon"></span></a>
     <a href="{{site.twitter}}"><span class="fa fa-fw fa-2x fa-twitter white-icon"></span></a>
+    <a href="{{site.github}}"><span class="fa fa-fw fa-2x fa-github white-icon"></span></a>
   </div>
 </footer>
 <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
