more homepage stuff

--- a/css/style.scss
+++ b/css/style.scss
@@ -267,3 +267,30 @@ a.contact-color:visited {
 .bg-instagram {
 	background-color:$instagram-purple;
 }
+
+// Embed Helper
+
+.embed-half {
+  display: block;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
