oh wow, is that more content? a keynote speaker?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="alert alert-info" role="alert">
-        Additional information such as our keynote speaker, plenary descriptions and address rosters are coming soon - stay tuned!
+        Additional information such as our plenary descriptions and address rosters are coming soon - stay tuned!
       </div>
     </div>
 
