--- a/_layouts/plenary.html
+++ b/_layouts/plenary.html
@@ -21,6 +21,9 @@
 						</p>
 						{% endcomment %}
 						<p class="card-text">
+							{{ content }}
+						</p>
+						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
 					</div>
