--- a/css/style.scss
+++ b/css/style.scss
@@ -270,12 +270,10 @@ a.contact-color:visited {
 
 // Embed Helper
 
-.embed-half {
-  display: block;
+.img-half {
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
-  height: auto;
 }
 
 .embed-container {
