initial port to FA5
needs work

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="{{site.baseurl}}/img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/img/favicon-16x16.png">
   <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <script src="{{ "/js/google_analytics.js" | prepend: site.baseurl }}"></script>
+  <script defer src="{{site.baseurl}}/js/fontawesome-all.min.js"></script>
   <style>
 		body{
 			background-image:url("{{ "/img/earth.png" | prepend: site.baseurl }}"),url("{{ "/img/stars.png" | prepend: site.baseurl }}");
