--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       The {{ site.title }} website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="{{site.github}}" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="{{site.baseurl}}/faq/" style="text-decoration:underline;">our FAQ</a> or get in touch with us!
+      Have any questions or concerns? Check out <a class="white-icon" href="{{site.baseurl}}/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="{{site.baseurl}}/contact/" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="{{site.email}}"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="{{site.facebook}}"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
