--- a/_layouts/plenary.html
+++ b/_layouts/plenary.html
@@ -14,12 +14,7 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>{{ page.title }}</h1>
-						{% comment %}
 						<img class="img-fluid plenary-img" src="{{site.baseurl}}/img/plen/{{page.pic}}" alt="{{page.title}} picture"/>
-						<p class="card-text">
-							{{ content }}
-						</p>
-						{% endcomment %}
 						<p class="card-text">
 							{{ content }}
 						</p>
@@ -29,12 +24,11 @@
 					</div>
 				</div>
 			</div>
-			{% comment %}
 			<div class="card card-body mt-2">
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid rounded-circle mx-auto d-block" src="{{site.baseurl}}/img/speakers/{{ speaker1.pic }}" alt="{{speaker1.name}}">
+						<img class="img-fluid mx-auto d-block rounded" src="{{site.baseurl}}/img/speakers/{{ speaker1.pic }}" alt="{{speaker1.name}}">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">{{ speaker1.name }}</h2>
@@ -43,7 +37,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid rounded-circle mx-auto d-block" src="{{site.baseurl}}/img/speakers/{{ speaker2.pic }}" alt="{{speaker2.name}}">
+						<img class="img-fluid mx-auto d-block rounded" src="{{site.baseurl}}/img/speakers/{{ speaker2.pic }}" alt="{{speaker2.name}}">
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">{{ speaker2.name }}</h2>
@@ -51,7 +45,6 @@
 					</div>
 				</div>
 			</div>
-			{% endcomment %}
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
 					<a class="card-link" href="{{site.baseurl}}/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
