--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="alert alert-info" role="alert">
-        Watch our Keynote Address, livestreamed on <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">our Facebook Page</a> at 7:00 PM!
+        Watch our programs in Laidlaw Hall, livestreamed on <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">our Facebook Page</a>!
       </div>
     </div>
 
