closing up shop for this year!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="alert alert-info" role="alert">
-        Watch our programs in Laidlaw Hall, livestreamed on <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">our Facebook Page</a>!
+        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
     </div>
 
