--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,6 @@
     <a href="{{site.github}}"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
   </div>
 </footer>
-<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/tether.min.js" | prepend:site.baseurl}}"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/tether.min.js></script>
