--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,16 +8,16 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="{{site.baseurl}}/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{site.baseurl}}/img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/img/favicon-16x16.png">
-  <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
-  <script src="{{ "/js/google_analytics.js" | prepend: site.baseurl }}"></script>
-  <script defer src="{{site.baseurl}}/js/fontawesome-all.min.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="stylesheet" href= "../css/bootstrap.min.css">
+  <link rel="stylesheet" href= "../css/style.css">
+  <script src="../js/google_analytics.js"></script>
+  <script defer src="../js/fontawesome-all.min.js"></script>
   <style>
 		body{
-			background-image:url("{{ "/img/earth.png" | prepend: site.baseurl }}"),url("{{ "/img/stars.png" | prepend: site.baseurl }}");
+			background-image:url("../img/earth.png"),url("/img/stars.png");
 			background-repeat:no-repeat;
 		}
 	</style>
