stars and stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <script defer src="../js/fontawesome-all.min.js"></script>
   <style>
 		body{
-			background-image:url("../img/earth.png"),url("/img/stars.png");
+			background-image:url("../img/earth.png"),url("../img/stars.png");
 			background-repeat:no-repeat;
 		}
 	</style>
