--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,4 +15,4 @@
 </footer>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js"></script>
