--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="{{ site.baseurl }}/"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="{{ site.baseurl }}/"
+    ><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"
+  /></a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -30,7 +40,12 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="{{ site.regurl }}" data-proofer-ignore>Register</a>
+        <a
+          class="btn btn-outline-primary"
+          href="{{ site.regurl }}"
+          data-proofer-ignore
+          >Register</a
+        >
       </li>
     </ul>
   </div>
