--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,24 +1,53 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="The World Affairs Conference">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <meta name="author" content="The World Affairs Conference" />
 
-  <title>{% if page.title %}{{ page.title | escape }} | The World Affairs Conference{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <title>
+    {% if page.title %}{{ page.title | escape }} | The World Affairs
+    Conference{% else %}{{ site.title | escape }}{% endif %}
+  </title>
+  <meta
+    name="description"
+    content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"
+  />
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="{{site.baseurl}}/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="{{site.baseurl}}/img/android-icon-192x192.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../img/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="96x96"
+    href="../img/favicon-96x96.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../img/favicon-16x16.png"
+  />
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/google_analytics.js"></script>
   <script defer src="../js/fontawesome-all.min.js"></script>
   <style>
-    body{
-      background-image:url("../img/earth.png"),url("../img/stars.png");
-      background-repeat:no-repeat;
+    body {
+      background-image: url("../img/earth.png"), url("../img/stars.png");
+      background-repeat: no-repeat, repeat;
     }
   </style>
 </head>
