remove prettier, for now (issues with windows/linux mixing) -- added carousel to home page and added keys to some mapped elements for eslint

--- a/src/styles/pages/_Home.scss
+++ b/src/styles/pages/_Home.scss
@@ -54,4 +54,10 @@
     background-color: transparent;
     color: $color-light;
   }
+  .carousel-img {
+    width: 100%;
+  }
+  .text-accent {
+    font-weight: bolder;
+  }
 }
