update email list policy

--- a/src/styles/pages/_Home.scss
+++ b/src/styles/pages/_Home.scss
@@ -38,6 +38,7 @@
       border: none;
       color: $color-light;
       font-size: 1.8em;
+      width: 15%;
       &:hover {
         color: $color-grey;
         background-color: transparent;
