--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@ SCSS by @jeffersonDing
 @import './pages/Plenaries';
 @import './pages/Contact';
 @import './pages/Sprint';
+@import './pages/Speakers';
 
 // fonts
 @import 'fonts';
