prepare for WAC 2022

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ SCSS by @jeffersonDing
 @import './pages/Contact';
 @import './pages/Sprint';
 @import './pages/Speakers';
+@import './pages/Keynote';
 
 // fonts
 @import 'fonts';
