--- a/src/styles/pages/_Plenaries.scss
+++ b/src/styles/pages/_Plenaries.scss
@@ -16,4 +16,11 @@
     filter: brightness(50%);
     transition: transform 0.2s;
   }
+  .overlay {
+    font-size: 8vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
