--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,6 +8,6 @@ $color-instagram: #8a3ab9;
 $color-tint: rgba(0, 0, 0, 0.4);
 $color-grey: #fcf8edad;
 $color-wac-light-blue: #51c9ec;
-$color-wac-dark-blue: #607ea2;
+$color-wac-dark-blue: #070808;
 $color-ucc-blue: #233c6a;
 $color-bh-green: #225633;
