📝prepare for recording retrival service

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@ SCSS by @jeffersonDing
 @import './pages/Speakers';
 @import './pages/Keynote';
 @import './pages/Events';
+@import './pages/Schedule';
 
 // fonts
 @import 'fonts';
