🚸  added form validation

--- a/src/styles/pages/_Schedule.scss
+++ b/src/styles/pages/_Schedule.scss
@@ -10,7 +10,7 @@
   color: $color-dark;
 }
 .terms {
-  border: 1px solid $color-dark;
+  border: 1px solid $color-red;
   padding: 0.4rem;
   max-height: 150px;
   overflow-y: scroll;
