--- a/src/styles/pages/_Speakers.scss
+++ b/src/styles/pages/_Speakers.scss
@@ -26,9 +26,11 @@
 
 .speaker h4 {
   font-size: 1.5em;
-  margin-top: 15px;
+  margin-top: 0px;
+  font-weight: 600;
 }
 
 .speaker h5 {
   font-size: 1em;
+  margin-bottom: 18px;
 }
