--- a/src/styles/pages/_Schedule.scss
+++ b/src/styles/pages/_Schedule.scss
@@ -1,8 +1,10 @@
 #schedule {
   .btn-outline-danger {
-    display: flex;
+    display: inline-block;
+    width: 100%;
+    margin-top: 12px;
     align-items: center;
-    max-width: 160px;
+    white-space: nowrap;
   }
 }
 .error {
