add vertically center headshot container

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@ SCSS by @jeffersonDing
 @import './pages/Keynote';
 @import './pages/Events';
 @import './pages/Schedule';
+@import './pages/Team';
 
 // fonts
 @import 'fonts';
