Sync master w dev & add images

--- a/src/styles/pages/_Schedule.scss
+++ b/src/styles/pages/_Schedule.scss
@@ -12,8 +12,11 @@
   color: $color-dark;
 }
 .terms {
-  border: 1px solid $color-dark;
+  border: 1px solid $color-red;
   padding: 0.4rem;
   max-height: 150px;
   overflow-y: scroll;
+}
+.modal-content {
+  margin: 1.5rem;
 }
