--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -5,150 +5,58 @@ Nexa Bold
 Nexa Bold Italic
  */
 
-@font-face {
-  font-family: 'Nexa';
-  src: url('webfonts/3018A5_C_0.eot');
-  src: url('webfonts/3018A5_C_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_C_0.woff2') format('woff2'),
-    url('webfonts/3018A5_C_0.woff') format('woff'),
-    url('webfonts/3018A5_C_0.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Nexa';
-  src: url('webfonts/3018A5_B_0.eot');
-  src: url('webfonts/3018A5_B_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_B_0.woff2') format('woff2'),
-    url('webfonts/3018A5_B_0.woff') format('woff'),
-    url('webfonts/3018A5_B_0.ttf') format('truetype');
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Nexa';
-  src: url('webfonts/3018A5_4_0.eot');
-  src: url('webfonts/3018A5_4_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_4_0.woff2') format('woff2'),
-    url('webfonts/3018A5_4_0.woff') format('woff'),
-    url('webfonts/3018A5_4_0.ttf') format('truetype');
-  font-weight: bold;
-}
-@font-face {
-  font-family: 'Nexa';
-  src: url('webfonts/3018A5_3_0.eot');
-  src: url('webfonts/3018A5_3_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_3_0.woff2') format('woff2'),
-    url('webfonts/3018A5_3_0.woff') format('woff'),
-    url('webfonts/3018A5_3_0.ttf') format('truetype');
-  font-weight: bold;
-  font-style: italic;
-}
-/* | NEXA LIGHT |
-Nexa Light
-Nexa Light Italic
-*/
-/*
-@font-face {
-	font-family: 'Nexa Light';
-	src: url('webfonts/3018A5_A_0.eot');
-	src: url('webfonts/3018A5_A_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_A_0.woff2') format('woff2'),url('webfonts/3018A5_A_0.woff') format('woff'),url('webfonts/3018A5_A_0.ttf') format('truetype');
-}
-@font-face {
-	font-family: 'Nexa Light';
-	src: url('webfonts/3018A5_9_0.eot');
-	src: url('webfonts/3018A5_9_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_9_0.woff2') format('woff2'),url('webfonts/3018A5_9_0.woff') format('woff'),url('webfonts/3018A5_9_0.ttf') format('truetype');
-	font-style:italic;
-}
-*/
-/* | NEXA THIN | */
-/*
-@font-face {
-	font-family: 'Nexa Thin';
-	src: url('webfonts/3018A5_0_0.eot');
-	src: url('webfonts/3018A5_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_0_0.woff2') format('woff2'),url('webfonts/3018A5_0_0.woff') format('woff'),url('webfonts/3018A5_0_0.ttf') format('truetype');
-}
-*/
-/* | NEXA BLACK |
-Nexa Black
-Nexa Black Italic
-*/
-/*
-@font-face {
-	font-family: 'Nexa Black';
-	src: url('webfonts/3018A5_2_0.eot');
-	src: url('webfonts/3018A5_2_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_2_0.woff2') format('woff2'),url('webfonts/3018A5_2_0.woff') format('woff'),url('webfonts/3018A5_2_0.ttf') format('truetype');
-}
-@font-face {
-	font-family: 'Nexa Black';
-	src: url('webfonts/3018A5_1_0.eot');
-	src: url('webfonts/3018A5_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_1_0.woff2') format('woff2'),url('webfonts/3018A5_1_0.woff') format('woff'),url('webfonts/3018A5_1_0.ttf') format('truetype');
-	font-style:italic;
-}
-*/
-/* | NEXA BOOK |
-Nexa Book
-Nexa Book Italic
-*/
-/*
-@font-face {
-	font-family: 'Nexa Book';
-	src: url('webfonts/3018A5_6_0.eot');
-	src: url('webfonts/3018A5_6_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_6_0.woff2') format('woff2'),url('webfonts/3018A5_6_0.woff') format('woff'),url('webfonts/3018A5_6_0.ttf') format('truetype');
-}
-@font-face {
-	font-family: 'Nexa Book';
-	font-style:italic;
-	src: url('webfonts/3018A5_5_0.eot');
-	src: url('webfonts/3018A5_5_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_5_0.woff2') format('woff2'),url('webfonts/3018A5_5_0.woff') format('woff'),url('webfonts/3018A5_5_0.ttf') format('truetype');
-}
-*/
-/* | NEXA HEAVY |
-Nexa Heavy
-Nexa Heavy Italic
-*/
-@font-face {
-  font-family: 'Nexa Heavy';
-  src: url('webfonts/3018A5_8_0.eot');
-  src: url('webfonts/3018A5_8_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_8_0.woff2') format('woff2'),
-    url('webfonts/3018A5_8_0.woff') format('woff'),
-    url('webfonts/3018A5_8_0.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Nexa Heavy';
-  src: url('webfonts/3018A5_7_0.eot');
-  src: url('webfonts/3018A5_7_0.eot?#iefix') format('embedded-opentype'),
-    url('webfonts/3018A5_7_0.woff2') format('woff2'),
-    url('webfonts/3018A5_7_0.woff') format('woff'),
-    url('webfonts/3018A5_7_0.ttf') format('truetype');
-  font-style: italic;
-}
-/* | NEXA EXTRA BOLD |
-NexaXBold
-NexaXBoldItalic
-*/
-/*
-@font-face {
-	font-family: 'Nexa XBold';
-	src: url('webfonts/3018A5_F_0.eot');
-	src: url('webfonts/3018A5_F_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_F_0.woff2') format('woff2'),url('webfonts/3018A5_F_0.woff') format('woff'),url('webfonts/3018A5_F_0.ttf') format('truetype');
-}
-@font-face {
-	font-family: 'Nexa XBold';
-	src: url('webfonts/3018A5_E_0.eot');
-	src: url('webfonts/3018A5_E_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3018A5_E_0.woff2') format('woff2'),url('webfonts/3018A5_E_0.woff') format('woff'),url('webfonts/3018A5_E_0.ttf') format('truetype');
-	font-style:italic;
-}
-*/
-/* |FREE LICENSED FONTS|
 
-	This was when we were poor. We don't use these any more, but in a pinch we can pull them back up. The EULA is MIT OPEN 2.0
+// @font-face {
+//   font-family: 'Nexa';
+//   src: url('webfonts/3018A5_C_0.eot');
+//   src: url('webfonts/3018A5_C_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_C_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_C_0.woff') format('woff'),
+//     url('webfonts/3018A5_C_0.ttf') format('truetype');
+// }
+// @font-face {
+//   font-family: 'Nexa';
+//   src: url('webfonts/3018A5_B_0.eot');
+//   src: url('webfonts/3018A5_B_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_B_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_B_0.woff') format('woff'),
+//     url('webfonts/3018A5_B_0.ttf') format('truetype');
+//   font-style: italic;
+// }
+// @font-face {
+//   font-family: 'Nexa';
+//   src: url('webfonts/3018A5_4_0.eot');
+//   src: url('webfonts/3018A5_4_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_4_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_4_0.woff') format('woff'),
+//     url('webfonts/3018A5_4_0.ttf') format('truetype');
+//   font-weight: bold;
+// }
+// @font-face {
+//   font-family: 'Nexa';
+//   src: url('webfonts/3018A5_3_0.eot');
+//   src: url('webfonts/3018A5_3_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_3_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_3_0.woff') format('woff'),
+//     url('webfonts/3018A5_3_0.ttf') format('truetype');
+//   font-weight: bold;
+//   font-style: italic;
+// }
 
-@font-face{
-	font-family:Nexa;
-	src:url(nexa/nexa_light.otf);
-}
-@font-face{
-	font-family:Nexa;
-	font-weight:bold;
-	src:url(nexa/nexa_bold.otf);
-}
-*/
+// @font-face {
+//   font-family: 'Nexa Heavy';
+//   src: url('webfonts/3018A5_8_0.eot');
+//   src: url('webfonts/3018A5_8_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_8_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_8_0.woff') format('woff'),
+//     url('webfonts/3018A5_8_0.ttf') format('truetype');
+// }
+// @font-face {
+//   font-family: 'Nexa Heavy';
+//   src: url('webfonts/3018A5_7_0.eot');
+//   src: url('webfonts/3018A5_7_0.eot?#iefix') format('embedded-opentype'),
+//     url('webfonts/3018A5_7_0.woff2') format('woff2'),
+//     url('webfonts/3018A5_7_0.woff') format('woff'),
+//     url('webfonts/3018A5_7_0.ttf') format('truetype');
+//   font-style: italic;
+// }
