fix prettier issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,7 +49,7 @@ html {
 body {
   min-width: 100% !important;
   min-height: 100% !important;
-  font-family: "Gill Sans" !important;
+  font-family: 'Gill Sans' !important;
   padding-top: 4em !important;
   padding-bottom: 1em !important;
   background-color: $color-dark !important;
@@ -88,7 +88,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "GillSans" !important;
+  font-family: 'GillSans' !important;
   font-weight: 700;
 }
 
