--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+	.text-balance {
+		text-wrap: balance;
+	}
+}
+
 .markdown {
 	@apply text-white;
 }
